# pr-lint

./: .pre-commit-config.yaml  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: pr-lint.yml  python-publish.yml
src/pr_lint/: formatter.py  linter.py  main.py  utils.py
src/pr_lint/tests/: test_main.py  test_utils.py
src/pr_lint/tests/__snapshots__/test_main/: test_clean_title[U0001f34eupdate(v2.0) version updateU0001f34e].json  test_clean_title[U0001f41bfix correct typoU0001f41b].json  test_clean_title[U0001f41bu4feeu590d correct typoU0001f41b].json  test_clean_title[bug fix issue U0001f41e].json  test_clean_title[feature(add-new) add a new feature].json  test_clean_title[no type].json  test_clean_title[not an emoji prefix but contains U0001f680 emoji].json  test_clean_title[u4feeu590duff1au66f4u6b63u767bu5f55u65b9u6cd5u4e2du7684u9519u5b57].json
