[project]
name = "pr-lint"
dynamic = ["version"]
description = ""
authors = [
    { name = "lucemia", email = "lucemia@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygithub==2.5.0",
    "typer==0.15.1",
]

[project.scripts]
pr-lint = "pr_lint.main:app"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "syrupy==4.8.0",
    "pre-commit==4.0.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/pr_lint"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
